--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Permalinks
 #
-# Use of `relative_permalinks` ensures post links from the index work properly.
+
 permalink:           pretty
 
 
 # Setup
 title:               Mandalas
-tagline:             'A Jekyll theme'
+tagline:             'Mensajes Positivos Para La Humanidad'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+url:                 #
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jorge L. Delgado
+  url:               #
+  email:             #
 
 # Custom vars
 version:             1.0.0
