--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:           pretty
 # Setup
 title:               Mandalas
 tagline:             'Mensajes Positivos Para La Humanidad'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 #
-baseurl:             ''
+description:         'Un proyecto de Delgado Photography y South First Media'
+url:                 yuquiyu2017.github.io
+baseurl:             'https://yuquiyu2017.github.io/'
 paginate:            5
 
 # About/contact
