--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ paginate:            5
 
 # About/contact
 author:
-  name:              Jorge L. Delgado
+  name:              DP y SFM
   url:               #
   email:             #
 
