--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ permalink:           pretty
 title:               Mandalas
 tagline:             'Mensajes Positivos Para La Humanidad'
 description:         'Un proyecto de Delgado Photography y South First Media'
-url:                 https://yuquiyu2017.github.io/
-baseurl:             ''
+url:                 yuquiyu2017.github.io/
+baseurl:             'https://yuquiyu2017.github.io/'
 paginate:            5
 
 # About/contact
