--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:           pretty
 title:               Mandalas
 tagline:             'Mensajes Positivos Para La Humanidad'
 description:         'Un proyecto de Delgado Photography y South First Media'
-url:                 yuquiyu2017.github.io/
+url:                 yuquiyu2017.github.io
 baseurl:             'https://yuquiyu2017.github.io'
 paginate:            5
 
