--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Mandalas
 tagline:             'Mensajes Positivos Para La Humanidad'
 description:         'Un proyecto de Delgado Photography y South First Media'
 url:                 yuquiyu2017.github.io
-baseurl:             'https://yuquiyu2017.github.io/'
+baseurl:             https://yuquiyu2017.github.io
 paginate:            5
 
 # About/contact
