--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:           pretty
 # Setup
 title:               Mandalas
 tagline:             'Mensajes Positivos Para La Humanidad'
-description:         'Un proyecto de Delgado Photography y South First Media'
+description:         'Un proyecto colaborativo por Delgado Photography y South First Media'
 url:                 yuquiyu2017.github.io
 baseurl:             'https://yuquiyu2017.github.io'
 paginate:            5
