--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:           pretty
 # Setup
 title:               Mandalas
 tagline:             ''
-description:         'Un proyecto colaborativo por Delgado Photography y South First Media'
+description:         'Mandalas es un proyecto colaborativo por Delgado Photography y South First Media'
 url:                 yuquiyu2017.github.io
 baseurl:             'https://yuquiyu2017.github.io'
 paginate:            5
