--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ permalink:           pretty
 
 
 # Setup
-title:               Mandalas
+title:               Si[n]ombre
 tagline:             ''
-description:         'Mandalas es un proyecto colaborativo por Delgado Photography y South First Media'
+description:         'Si[n]ombre es un proyecto colaborativo por Delgado Photography y South First Media'
 url:                 yuquiyu2017.github.io
 baseurl:             'https://yuquiyu2017.github.io'
 paginate:            5
